--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello Coursera</title>
+    <title>Hello Coursera students</title>
   </head>
   <body>
-    <h1>Hello Coursera Gana</H1>
+    <h1>Hello Coursera Gana Again</H1>
   </body>
 </html>
