--- a/module3-solution/itemsloaderindicator.template.html
+++ b/module3-solution/itemsloaderindicator.template.html
@@ -1,6 +1,6 @@
 <ul>
   <li ng-repeat="item in list">
    {{item.name}}, {{item.short_name}}, {{item.description}}
-   <button ng-click="onRemove({index: $index});">Remove Item</button>
+   <button ng-click="onRemove({index: $index});">Dont want this one</button>
   </li>
 </ul>
